docs: add documentation for show Opening
